alignment bug

--- a/gallery.css
+++ b/gallery.css
@@ -5,8 +5,8 @@ body {
 }
 
 .row {
-    margin-bottom: 10px;
-    justify-content: center;
+    
+    margin: 0 0 0 0;
     
 }
 
